[package]
name = "rstix"
description = "STIX 2.1 library for Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# docs.rs builds with default features unless told otherwise; the pattern
# engine and validation pipeline are feature-gated public API and must
# appear in the rendered docs.
[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde"]

serde = [
  "dep:serde",
  "dep:idna",
  "dep:url",
  "dep:email_address",
  "dep:base64",
  "dep:encoding_rs",
]
pattern = ["serde", "dep:ipnet", "dep:regex", "dep:unicode-normalization", "dep:base64"]
validate = ["serde", "pattern"]
graph = ["serde"]
marking = ["serde"]
store = ["serde"]
store-fs = ["store"]
taxii = [
  "serde",
  "dep:reqwest",
  "dep:tokio",
  "dep:secrecy",
  "dep:futures",
  "dep:hickory-resolver",
  "dep:rustls",
  "dep:rustls-pki-types",
  "dep:rustls_webpki",
  "dep:webpki-roots",
  "dep:sha2",
  "dep:p12-keystore",
]

[dependencies]
phf = { version = "0.14", features = ["macros"] }
serde_jcs = "0.2"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "v5"] }

idna = { version = "1.0", optional = true }
url = { version = "2.5", optional = true }
email_address = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
encoding_rs = { version = "0.8", optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
ipnet = { version = "2", optional = true }
regex = { version = "1", optional = true }
unicode-normalization = { version = "0.1", optional = true }

reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "query"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
secrecy = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config", "dnssec-ring"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"], optional = true }
rustls-pki-types = { version = "1.9", features = ["std"], optional = true }
rustls_webpki = { package = "rustls-webpki", version = "0.103", optional = true }
webpki-roots = { version = "0.26", optional = true }
sha2 = { version = "0.11", optional = true }
p12-keystore = { version = "0.3", optional = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }
rustls-webpki = { package = "rustls-webpki", version = "0.103" }
rustls-pki-types = "1.9"
sha2 = "0.11"
secrecy = "0.8"

[[test]]
name = "pattern_parse"
required-features = ["pattern"]

[[test]]
name = "pattern_eval"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_spec_eval"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_operators"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_sco_fields"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_errors"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_eval_security"
required-features = ["pattern", "serde"]

[[test]]
name = "pattern_indicator"
required-features = ["pattern", "serde"]

[[test]]
name = "validate_pipeline"
required-features = ["validate"]

[[test]]
name = "graph"
required-features = ["graph", "serde"]

[[test]]
name = "marking"
required-features = ["marking", "serde"]

[[test]]
name = "store"
required-features = ["store", "serde"]

[[test]]
name = "store_fs"
required-features = ["store-fs", "serde"]

[[test]]
name = "taxii_client"
required-features = ["taxii"]

[[test]]
name = "taxii_live"
required-features = ["taxii"]
